@@ -45,6 +45,7 @@ static void compatInit(Compatibility_t &c)
     c.fix_climb_bgo_speed_adding = true;
     c.enable_climb_bgo_layer_move = true;
     c.fix_player_clip_wall_at_npc = true;
+    c.fix_skull_raft = true;
 }
 
 static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
@@ -69,6 +70,7 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
     compat.read("fix-climb-bgo-speed-adding", c.fix_climb_bgo_speed_adding, c.fix_climb_bgo_speed_adding);
     compat.read("enable-climb-bgo-layer-move", c.enable_climb_bgo_layer_move, c.enable_climb_bgo_layer_move);
     compat.read("fix-player-clip-wall-at-npc", c.fix_player_clip_wall_at_npc, c.fix_player_clip_wall_at_npc);
+    compat.read("fix-skull-raft", c.fix_skull_raft, c.fix_skull_raft);
     compat.endGroup();
 }
 
