@@ -38,6 +38,7 @@ struct Compatibility_t
     bool fix_climb_bgo_speed_adding;
     bool enable_climb_bgo_layer_move;
     bool fix_player_clip_wall_at_npc;
+    bool fix_skull_raft;
 };
 
 extern Compatibility_t g_compatibility;
